--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en" data-critters-container>
 <head>
   <meta charset="utf-8">
-  <title>GithubOptionOne</title>
-  <base href="/github-option-one/">
+  <title>Github Option One | Esther White</title>
+  <base href="/angular-to-github-option-one/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles-5INURTSO.css"></head>
+<style>body{background-color:#333}
+</style><link rel="stylesheet" href="styles-KV7B2CYI.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-KV7B2CYI.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-RX4V3J3S.js" type="module"></script><script src="main-M7OIAIUI.js" type="module"></script></body>
+<script src="polyfills-RX4V3J3S.js" type="module"></script><script src="main-F33E5MNZ.js" type="module"></script></body>
 </html>
